syntax = "proto3";

option go_package = "./pb";

message SubscribeRequest {
  string id = 1;
  string to = 2;
  string from = 3;
  string event = 4;
  string content = 5;
}

message SubscribeResponse {
  string id = 1;
  string from = 2;
  string content = 3;
}

service SubscribeService {
  rpc Subscribe(SubscribeRequest) returns (stream SubscribeResponse);
  rpc SubscribeBidi(stream SubscribeRequest) returns (stream SubscribeResponse);
}